--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,14 +17,12 @@
         android:id="@+id/textView" />
 
     <Button
-        android:text="Button"
+        android:id="@+id/b_Logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginLeft="44dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="61dp"
-        android:id="@+id/b_Logout" />
+        android:layout_alignParentTop="false"
+        android:layout_below="@+id/textView"
+        android:text="@string/action_sign_out_short" />
 </RelativeLayout>
